@@ -1,0 +1,74 @@
+"""
+
+Problem Description
+Given two integer arrays, A and B of size N and M, respectively. Your task is to find all the common elements in both the array.
+
+NOTE:
+
+Each element in the result should appear as many times as it appears in both arrays.
+The result can be in any order.
+
+
+Problem Constraints
+1 <= N, M <= 105
+1 <= A[i] <= 109
+
+
+
+Input Format
+First argument is an integer array A of size N.
+Second argument is an integer array B of size M.
+
+
+
+Output Format
+Return an integer array denoting the common elements.
+
+
+
+Example Input
+Input 1:
+ A = [1, 2, 2, 1]
+ B = [2, 3, 1, 2]
+
+Input 2:
+ A = [2, 1, 4, 10]
+ B = [3, 6, 2, 10, 10]
+
+
+Example Output
+Output 1:
+ [1, 2, 2]
+
+Output 2:
+ [2, 10]
+
+
+Example Explanation
+Explanation 1:
+ Elements (1, 2, 2) appears in both the array. Note 2 appears twice in both the array.
+
+Explantion 2:
+ Elements (2, 10) appears in both the array.
+
+"""
+
+A = [2, 1, 4, 10]
+B = [3, 6, 2, 10, 10]
+def solve(self, A, B):
+    A.sort()
+    B.sort()
+    i, j = 0, 0
+    common = []
+    while i < len(A) and j < len(B):
+        if A[i] == B[j]:
+            common.append(A[i])
+            i += 1
+            j += 1
+        elif A[i] < B[j]:
+            i += 1
+        else:
+            j += 1
+    return common
+
+solve('data', A, B)
