@@ -84,3 +84,9 @@ Submitted - day22 - Homework - Largest number
 29/05/2023
 Submitted - day22 - Homework - Element removal
 
+30/05/2023
+Streak break - 14 to 7
+
+31/05/2023
+Submitted - day22 - Assignment - common element, largest continuous sum
+
